--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -4,5 +4,7 @@ colorama==0.4.6
 Flask==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
+mariadb==1.1.10
 MarkupSafe==2.1.5
+packaging==24.1
 Werkzeug==3.0.3
